* Support for Java 9+ Runtime * Improved security (better data encryption algorithm) * Other minor improvements